# cc-hitl-template

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build-and-push.sh  justfile  pyproject.toml  pytest.ini
.claude/: CLAUDE.md  settings.json
.claude/agents/: deployment.md  setup.md
.claude/commands/: cc-build-and-push-image.md  cc-deploy.md  cc-rebuild-deploy.md  cc-setup.md  cc-shutdown.md  cc-skill-improver.md  cc-start-services.md  cc-stop-services.md  cc-sync-configs.md
.claude/skills/docker-build/: SKILL.md  build.sh
.claude/skills/docker-build/scripts/: build.sh
.claude/skills/prerequisite-check/: SKILL.md
.claude/skills/prerequisite-check/scripts/: check.sh
.claude/skills/vm-setup/: SKILL.md
.claude/skills/vm-setup/scripts/: setup-vm.sh
.transfer-to-marketplace/: docker-build-improvements.md  session-learnings.md
claude_hitl_template/: __init__.py  agent.py  config.py  files.py  query.py  results.py
data/config/: ask_the_crowd.yaml.example  claude_hitl_template.yaml  claude_hitl_template.yaml.example  config.yaml
docs/: DAILY_WORKFLOW.md  DEPENDENCY-MANAGEMENT.md  ORBSTACK_SETUP.md  PLUGINS.md  QUICKSTART.md  SETUP.md  TROUBLESHOOTING.md
specs/: immutable-container-dependencies.md  plugin-system-integration.md  template-repo-changes.md
template_user/.claude/: CLAUDE.md  settings.json
tests/: __init__.py  test_actors.py  test_basic.py
